print GC